# order-service/src/main/java/com/amazon/order_service/order/infrastructure/persistence/entity/OrderEntity.java
@@ -18,7 +18,9 @@ public class OrderEntity {
     @Id
     private UUID id;
 
-    private String name;
+    private UUID productId;
+
+    private int quantity;
 
     private BigDecimal amount;
 
